[package]
name = "grpc-echo-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
tonic = "0.6"
prost = "0.9"
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}

[build-dependencies]
tonic-build = "0.6"
